manifests/pocket-id/post-install/overlays/lab/resources/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: pocket-id
  namespace: pocket-id
spec:
  parentRefs:
  - name: front-door
    sectionName: https
    namespace: gateway-api
    group: gateway.networking.k8s.io
    kind: Gateway
  hostnames:
  - auth.hunt.internal
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: pocket-id-server
      port: 443
      weight: 1
      kind: Service
